RWA-3564 fix easy code smells