@@ -63,7 +63,7 @@ public class EventMessageQueryService {
             fromDlq
         );
         List<CaseEventMessage> messages = messageEntities.stream()
-            .map(mapper::mapToCaseEventMessage).collect(Collectors.toList());
+            .map(mapper::mapToCaseEventMessage).toList();
 
         String message = messages.isEmpty() ? NO_MATCHING_RECORDS_FOR_THE_QUERY
             : format(FOUND_MESSAGES, messages.size());
@@ -123,7 +123,7 @@ public class EventMessageQueryService {
             .filter(Objects::nonNull)
             .map(String::toUpperCase)
             .map(MessageState::valueOf)
-            .collect(Collectors.toList());
+            .toList();
     }
 
 }
